Implemented Java8 support and implemented preloading for the validators